--- a/remanga/pubspec.yaml
+++ b/remanga/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  gap: ^1.2.0
+  provider: 5.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
