--- a/remanga/pubspec.yaml
+++ b/remanga/pubspec.yaml
@@ -32,10 +32,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  cached_network_image: ^3.0.0
+  sqflite: ^2.0.0+3
+  rx_bloc: ^3.0.0
 
 dev_dependencies:
   injectable_generator: 1.4.1
   build_runner: 2.0.4
+  rx_bloc_generator: any
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
